# ut-computer

./: .gitignore  Install gtest.md  README.md  ut-computer.pro
Documentation/html/: _atom_literal_8cpp.html  _atom_literal_8cpp__incl.dot  _atom_literal_8cpp__incl.md5  _atom_literal_8cpp_source.html  _atom_literal_8h.html  (+1407 more)
Tests_de_Conception/Test_Literal_Factory_With_Function_Pointers/: CMakeLists.txt  IntegerLiteral.cpp  IntegerLiteral.h  Literal.h  LiteralFactory.cpp  LiteralFactory.h  RealLiteral.cpp  RealLiteral.h  main.cpp
Tests_de_Conception_old/testLO21CLION/: CMakeLists.txt  main.cpp  tests.h
Tests_de_Conception_old/testLO21CLION/exceptions/: UTComputerException.cpp
Tests_de_Conception_old/testLO21CLION/lexer/: Lexer.cpp
Tests_de_Conception_old/testLO21CLION/literals/: ExpressionLiteral.cpp  ExpressionLiteral.h  LiteralFactory.h  NumericLiteral.h  StringLiteral.cpp
Tests_de_Conception_old/testLO21CLION/operators/: OperatorManager.cpp
UML/: ut-computer-conception.vpp  ut-computer-conception.vux
UTComputer/: .travis.yml  CMakeLists.txt  Calculator.cpp  Calculator.h  database.db  main.cpp  ut-computer.pro
UTComputer/db/: Database.cpp  Database.h
UTComputer/exceptions/: UTComputerException.cpp  UTComputerException.h
UTComputer/icone/: icone.icns
UTComputer/lexer/: Lexer.cpp  Lexer.h
UTComputer/literals/: AtomLiteral.cpp  AtomLiteral.h  ComplexLiteral.cpp  ComplexLiteral.h  ExpressionLiteral.cpp  ExpressionLiteral.h  Literal.cpp  Literal.h  LiteralFactory.cpp  LiteralFactory.h  NumericLiteral.cpp  NumericLiteral.h  ProgramLiteral.cpp  ProgramLiteral.h  StringLiteral.cpp  StringLiteral.h
UTComputer/operators/: CalculationOperator.cpp  CalculationOperator.h  Operator.cpp  Operator.h  OperatorDivision.cpp  OperatorDivision.h  OperatorManager.cpp  OperatorManager.h  OperatorMinus.cpp  OperatorMinus.h  OperatorMultiplication.cpp  OperatorMultiplication.h  OperatorPlus.cpp  OperatorPlus.h  PlusOperator.cpp  PlusOperator.h  StackOperator.cpp  StackOperator.h
UTComputer/operators/classic_operators/: OperatorDivision.h  OperatorIntegerDivision.cpp  OperatorIntegerDivision.h  OperatorMinus.cpp  OperatorMinus.h  OperatorModulo.cpp  OperatorModulo.h  OperatorMultiplication.cpp  OperatorMultiplication.h  OperatorNeg.cpp  OperatorNeg.h  OperatorPlus.h
UTComputer/operators/complex_operators/: OperatorDollar.cpp  OperatorDollar.h  OperatorIM.cpp  OperatorIM.h  OperatorRE.cpp  OperatorRE.h
UTComputer/operators/logical_operators/: OperatorAnd.cpp  OperatorAnd.h  OperatorDifferent.cpp  OperatorDifferent.h  OperatorEqual.cpp  OperatorEqual.h  OperatorInferior.cpp  OperatorInferior.h  OperatorInferiorEqual.cpp  OperatorInferiorEqual.h  OperatorNeg.cpp  OperatorNot.cpp  OperatorNot.h  OperatorOr.cpp  OperatorOr.h  OperatorSuperior.cpp  OperatorSuperior.h  OperatorSuperiorEqual.cpp  OperatorSuperiorEqual.h
UTComputer/operators/rational_operators/: OperateurDenominator.cpp  OperateurDenominator.h  OperatorDenominator.cpp  OperatorDenominator.h  OperatorNumerator.cpp  OperatorNumerator.h
UTComputer/operators/stack_operators/: OperatorCLEAR.cpp  OperatorCLEAR.h  OperatorDROP.cpp  OperatorDROP.h  OperatorDUP.cpp  OperatorDUP.h  OperatorLASTARGS.cpp  OperatorLASTARGS.h  OperatorLASTOP.cpp  OperatorLASTOP.h  OperatorREDO.cpp  OperatorREDO.h  OperatorSWAP.cpp  OperatorSWAP.h  OperatorUNDO.cpp  OperatorUNDO.h
UTComputer/sounds/: sound.cpp  sound.h
UTComputer/stack/: StackUTComputer.cpp  StackUTComputer.h
UTComputer/ut-computer-tests/: main.cpp  testG.cpp  testOperatorPlus.cpp  tests.h
UTComputer/ut-computer-tests/gtest/: CMakeCache.txt  Makefile  cmake_install.cmake
UTComputer/ut-computer-tests/lexer-tests/: tests_Lexer.cpp.cpp
UTComputer/ut-computer-tests/literals-tests/: tests_ExpressionLiteral.cpp
UTComputer/ut-computer-tests/operators-tests/: tests_Operator.cpp  tests_OperatorDivision.cpp  tests_OperatorMinus.cpp  tests_OperatorMultiplication.cpp  tests_OperatorPlus.cpp  tests_Operator_Manager.cpp  tests_PlusOperator.cpp
UTComputer/ut-computer-tests/stack-tests/: tests_StackUTComputer.cpp
UTComputer/ut_computer_tests/: main.cpp
UTComputer/ut_computer_tests/calculator_tests/: tests_calculator.cpp
UTComputer/ut_computer_tests/lexer_tests/: tests_Lexer.cpp  tests_Lexer.cpp.cpp
UTComputer/ut_computer_tests/literals-tests/: tests_AtomLiteral.cpp  tests_ComplexLiteral.cpp  tests_ExpressionLiteral.cpp  tests_LiteralFactory.cpp  tests_NumericLiteral.cpp  tests_ProgramLiteral.cpp
UTComputer/ut_computer_tests/operators_tests/: tests_Operator.cpp  tests_Operator_Manager.cpp
UTComputer/ut_computer_tests/operators_tests/classic_operators_tests/: tests_OperatorDivision.cpp  tests_OperatorIntegerDivision.cpp  tests_OperatorMinus.cpp  tests_OperatorMod.cpp  tests_OperatorMultiplication.cpp  tests_OperatorNeg.cpp  tests_OperatorPlus.cpp
UTComputer/ut_computer_tests/operators_tests/complex_operators_tests/: tests_OperatorDollar.cpp  tests_OperatorIM.cpp  tests_OperatorRE.cpp
UTComputer/ut_computer_tests/operators_tests/logical_operators_tests/: tests_OperatorAnd.cpp  tests_OperatorDifferent.cpp  tests_OperatorEqual.cpp  tests_OperatorInferior.cpp  tests_OperatorInferiorEqual.cpp  tests_OperatorNot.cpp  tests_OperatorOr.cpp  tests_OperatorSuperior.cpp  tests_OperatorSuperiorEqual.cpp
UTComputer/ut_computer_tests/operators_tests/rational_operators_tests/: tests_OperatorDenominator.cpp  tests_OperatorNumerator.cpp
UTComputer/ut_computer_tests/operators_tests/stack_operators_tests/: tests_OperatorCLEAR.cpp  tests_OperatorDROP.cpp  tests_OperatorDUP.cpp  tests_OperatorLASTARGS.cpp  tests_OperatorLASTOP.cpp  tests_OperatorSWAP.cpp  tests_OperatorUNDO_REDO.cpp
UTComputer/ut_computer_tests/stack_tests/: tests_StackUTComputer.cpp
UTComputer/views/: atomdialog.cpp  atomdialog.h  atomdialog.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  paramdialog.cpp  paramdialog.h  paramdialog.ui  progeditdialog.cpp  progeditdialog.h  progeditdialog.ui  programdialog.cpp  programdialog.h  programdialog.ui  setup.ui
tests/: Makefile  moc_test.cpp  tests.pro
(+94 files in other folders)
